Initial push to Skynex- repository

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@
 # For development: https://api.devnet.solana.com
 # For production: https://api.mainnet-beta.solana.com
 # Or use a custom RPC provider like Helius, QuickNode, etc.
-VITE_SOLANA_RPC_ENDPOINT=https://api.devnet.solana.com
+VITE_SOLANA_RPC_ENDPOINT=https://devnet.helius-rpc.com
